Finished adaptive design

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ body {
   font-size: 16px;
   line-height: 1.375;
   color: #5C5C5E;
+  min-width: 320px;
+  overflow-x: hidden;
 }
 
 .header {
@@ -75,12 +77,29 @@ body {
   height: 80px;
 }
 
+.menu-btn {
+  display: none;
+  width: 40px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menu-btn span {
+  height: 4px;
+  width: 100%;
+  border-radius: 15px;
+  background-color: #000;
+}
+
 .menu {
   display: flex;
   gap: 0 20px;
 }
 
+
 .logo {
+  display: flex;
   justify-self: center;
 }
 
@@ -221,6 +240,7 @@ body {
 .tabs__content-img {
   grid-row: 1/-1;
   align-self: stretch;
+  object-fit: cover;
 }
 
 .tabs__content-box h3 {
@@ -524,8 +544,6 @@ body {
   font-size: 13px;
 }
 
-.contacts__email {}
-
 .form {
   margin-bottom: 10px;
   position: relative;
@@ -548,7 +566,6 @@ body {
   font-weight: 400;
   line-height: 18px;
 }
-
 
 .form__btn {
   width: 50px;
